--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -11,6 +11,7 @@
 }
 
 html {
+    --current-color: #00E595;
     font-family: var(--tgui--font-family, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif);
     font-size: 16px;
     line-height: 1.5;
