--- a/src/components/Screen/components/Footer/components/Indicator/Indicator.module.css
+++ b/src/components/Screen/components/Footer/components/Indicator/Indicator.module.css
@@ -15,7 +15,9 @@
 }
 
 .path {
-    transition: fill 0.5s, fill-opacity 0.5s;
+    fill: var(--current-color);
+    stroke: var(--current-color);
+    transition: fill 0.5s, fill-opacity 0.5s, stroke 0.5s;
 }
 
 .circle {
